<resources>
    <string name="app_name">MySubmissionKelolaData</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_movie">Movie</string>
    <string name="title_tv_show">Tv Show</string>
    <string name="title_favorite">Favorite</string>
    <string name="please_wait">Please Wait ....</string>
    <string name="menu_favorite">Favorite</string>
    <string name="title">Title</string>
    <string name="rating">Rating</string>
    <string name="overview">Overview</string>
    <string name="menu_movies">Movies</string>
    <string name="menu_tv_show">Tv Show</string>
    <string name="release_date">Release Date</string>
    <string name="popularity">Popularity</string>
    <string name="score">Score</string>
    <string name="poster">Poster</string>
    <string name="no_data_available">No Data</string>
    <string name="remove_favorite">Remove Favorite</string>
    <string name="add_favorite">Add Favorite</string>
</resources>